unpackaged/main/default/objects/litify_pm__Role_View_Detail__mdt/litify_pm__Role_View_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Role View Detail</label>
    <pluralLabel>Role View Details</pluralLabel>
</CustomObject>