unpackaged/main/default/objects/litify_pm__Role_View_Detail__mdt/fields/litify_pm__Object__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Object__c</fullName>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
                <default>true</default>
                <label>Role</label>
            </value>
            <value>
                <fullName>Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>