unpackaged/main/default/objects/litify_pm__Role_View_Detail__mdt/fields/litify_pm__Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Record_Type_Developer_Name__c</fullName>
    <label>Record Type (Developer Name)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>